--- a/public/style.css
+++ b/public/style.css
@@ -13,12 +13,12 @@
 }
 
 html, label{
-    cursor: url(img/Mouse.png) 0 0, auto;
+    cursor: url(/img/Mouse.png) 0 0, auto;
 }
 
 
 body{
-    background-image: url(img/wxp.webp);
+    background-image: url(/img/wxp.webp);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -119,7 +119,7 @@ footer{
     border-radius: 10px;
     color: white;
     box-shadow: inset 0 5px 5px rgba(19, 149, 232, 0.5);
-    cursor: url(img/Pointer.png) 0 0, auto;
+    cursor: url(/img/Pointer.png) 0 0, auto;
     display: flex;
     align-items: center;
     gap: 5px;
@@ -225,7 +225,7 @@ button:hover{
 }
 
 .privat_fenster{
-  background-image: url(img/matrix.gif);
+  background-image: url(/img/matrix.gif);
   background-position: center;
   background-size: cover;
   overflow: hidden;
@@ -330,7 +330,7 @@ button:hover{
 }
 
 #startup{
-    background-image: url(img/startup.png);
+    background-image: url(/img/startup.png);
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -339,7 +339,7 @@ button:hover{
 
 #shutdown{
     display: none;
-    background-image: url(img/shutdown.png);
+    background-image: url(/img/shutdown.png);
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -359,12 +359,12 @@ button:hover{
 }
 
 #login{
-    background-image: url(img/login_background.png);
+    background-image: url(/img/login_background.png);
     background-position: center;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    cursor: url(img/Mouse.png) 0 0, auto;;
+    cursor: url(/img/Mouse.png) 0 0, auto;;
     flex-direction: column;
     gap: 1rem;
     display: none;
@@ -487,7 +487,7 @@ textarea:focus {
     left: 0;
     right: 0;
     background-repeat: repeat;
-    background-image: url(img/crack_textur.jpg);
+    background-image: url(/img/crack_textur.jpg);
     mix-blend-mode: lighten;
     pointer-events: none;
     display: none;
@@ -556,5 +556,5 @@ input[type=radio]{
 }
 
 input, button, .titel img:hover, .song i, .start_items:hover, #start, #go, .dropdown-content img, .dropdown-btn, .rechner_btn{
-    cursor: url(img/Pointer.png) 0 0, auto;
+    cursor: url(/img/Pointer.png) 0 0, auto;
 }
